Fixed bug with remove boxline from last element